--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "ucfirst",
     "lcfirst"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/El-Mahbub/uc-lc-first.git"
+  },
   "author": "elmahbub <elmahbub14021993@gmail.com>",
   "license": "MIT"
 }
